# hwrs640_hw4

./: LICENSE  README.md  main.py  pyproject.toml
notebooks/: 0_data_exploration.ipynb
src/: data.py
